# perplexity-clone

./: .cursorrules  .gitignore  Dockerfile  GITIGNORE_GUIDE.md  MIDDLEWARE_ARCHITECTURE.md  MONITORING.md  README.md  STARTUP.md  build.sh  docker-compose.yml  package-lock.json  package.json  plan.md  prometheus.yml  requirements.txt  run-all-tests.sh  run-tests.sh  setup-monitoring.sh  start-frontend.sh  test-monitoring.sh
backend/: Dockerfile  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt
backend/examples/: intelligent_synthesis_demo.py
backend/scripts/: run_local_email_test.py
backend/src/: auth.py  main.py  middleware.py
backend/src/api/: __init__.py  main.py
backend/src/api/v1/: __init__.py  endpoints.py  models.py
backend/src/core/: __init__.py  app_settings.py  config.py
backend/src/middleware/: __init__.py
backend/src/middleware/metrics/: flask.py  utils.py
backend/src/search/: __init__.py  answer_synthesizer.py  content_collator.py  langchain_client.py  multi_search.py
backend/src/services/: README.md  __init__.py  content_extractor.py  dispatcher_service.py  email_dispatcher.py  email_sender.py  email_worker.py  firestore_subscription_service.py  intelligent_llm_synthesis.py  llm_synthesis.py  query_enhancement.py  summary_generator.py  text_processor.py  web_search.py
backend/src/services/factories/: __init__.py  content_extractor_factory.py  intelligent_llm_factory.py  llm_factory.py  web_search_factory.py
backend/src/tasks/: __init__.py  email_tasks.py
backend/tests/: __init__.py  test_answer_synthesizer.py  test_api.py  test_content_collator.py  test_content_extractor.py  test_dispatcher_service.py  test_email_pipeline.py  test_firestore_subscription_service.py  test_intelligent_llm_synthesis.py  test_langchain_client.py  test_llm_synthesis.py  test_multi_search.py  test_query_enhancement.py  test_text_processor.py  test_web_search.py
(+155 files in other folders)
